# Engine-Chili2.0

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  test.cmd
.claude/: settings.local.json
.github/workflows/: windows-build.yml
apps/_template/: CMakeLists.txt  README.md
apps/_template/src/: main.cpp  runtime_entry.cpp  template_app.cpp  template_app.hpp  template_frame_builder.cpp  template_frame_builder.hpp  template_game.cpp  template_game.hpp  template_runtime.cpp  template_runtime.hpp
apps/pong/: CMakeLists.txt
apps/pong/runtime/: game_runtime_api.cpp  pong_runtime.cpp  pong_runtime.hpp
apps/pong/src/: game_host.cpp  game_host.hpp  main.cpp  pong_app.cpp  pong_app.hpp  pong_frame_builder.cpp  pong_frame_builder.hpp  pong_game.cpp  pong_game.hpp
apps/sandbox/src/: sandbox_app.cpp  sandbox_app.hpp
apps/space_invaders/: CMakeLists.txt
apps/space_invaders/src/: main.cpp  space_invaders_app.cpp  space_invaders_app.hpp  space_invaders_frame_builder.cpp  space_invaders_frame_builder.hpp  space_invaders_game.cpp  space_invaders_game.hpp
apps/studio/: CMakeLists.txt  README.md
apps/studio/coretools/runtime/: file-management.css  file-management.html  index.html  new-project.css  new-project.html  project-explorer.css  project-explorer.html  studio-top.css  studio-top.html
apps/studio/coretools/runtime/bottom-bar/: bottom-bar.html
apps/studio/coretools/runtime/dialogs/: file-dialog.html  new-project-dialog.html  workspace-dialog.html
apps/studio/coretools/runtime/left-bar/: left-bar.html
apps/studio/coretools/runtime/left-bar/components/: modeling-tools.html  scripting-tools.html
apps/studio/coretools/runtime/right-bar/: right-bar.html
apps/studio/coretools/runtime/shared/: studio.css
apps/studio/coretools/runtime/top-bar/: top-bar.html
apps/studio/coretools/runtime/web-prototype/: index.html
apps/studio/src/: studio_host.cpp  studio_host.hpp
apps/studio/src/bridge/: engine_bridge.cpp
apps/studio/src/commands/: command_policy.cpp  command_policy.hpp  command_protocol.cpp  command_protocol.hpp  command_router.cpp  command_router.hpp
apps/studio/src/runtime/: studio_runtime_host.cpp  studio_runtime_host.hpp
apps/studio/src/runtime/api/: game_runtime_library.cpp  game_runtime_library.hpp  hello_game_runtime.cpp  hello_game_runtime.hpp  runtime_game_api.hpp  runtime_registry.cpp  runtime_registry.hpp  studio_preview_runtime.cpp  studio_preview_runtime.hpp
apps/studio/src/runtime/host/: studio_connector.cpp  studio_connector.hpp  studio_runtime_host.cpp  studio_runtime_host.hpp
apps/studio/src/runtime/interaction/: cursor_space_calibration.cpp  studio_camera.cpp  studio_interaction_controller.cpp  studio_interaction_controller.hpp  studio_picking_service.cpp  studio_picking_service.hpp
apps/studio/src/runtime/presentation/: vector_icon.cpp  vector_icon_library.cpp  vector_icon_library.hpp
apps/studio/src/runtime/query/: runtime_commands.cpp  runtime_commands.hpp  runtime_queries.cpp  runtime_queries.hpp
apps/studio/src/runtime/scene/: default_scene_json.cpp  proxy_prototype_resolver.cpp  proxy_prototype_resolver.hpp  runtime_world.cpp  runtime_world.hpp  scene_runtime.cpp  scene_runtime.hpp  scene_serializer.cpp  scene_serializer.hpp  studio_default_scene_template.cpp  studio_default_scene_template.hpp
apps/studio/src/studio/: file_management_dialog.cpp  file_management_dialog.hpp  file_proxy.cpp  file_proxy.hpp  new_project_dialog.cpp  new_project_dialog.hpp  project_explorer_panel.cpp  project_explorer_panel.hpp  proxy_library.cpp  studio_build_request_service.cpp  studio_build_request_service.hpp  studio_build_system.cpp  studio_build_system.hpp  studio_command_query_service.cpp  studio_command_query_service.hpp  studio_console_panel.cpp  studio_layout_state.cpp  studio_layout_state.hpp  studio_project_system.cpp  studio_project_system.hpp  studio_template_system.cpp  studio_template_system.hpp  studio_workspace_request_service.cpp  studio_workspace_request_service.hpp  workspace_settings_dialog.hpp
apps/studio/src/transport/: http_server.cpp  http_server.hpp
core/: CMakeLists.txt
docs/: README.md
docs/css/: style.css
docs/engine/: ACCEPTANCE_CHECKLIST.md  API_MAP.md  ARCHI_RULES  REVIVAL_PLAN.md  TODO.md
include/engine/: game_runtime_api.hpp
src/app/: app_capabilities.hpp
src/core/: engine_context.hpp  engine_core.cpp  engine_core.hpp  presentation_snapshot_buffer.hpp  runtime_domains.cpp  runtime_domains.hpp  runtime_types.hpp
src/engine/: CMakeLists.txt
src/input/: input_key.h
src/modules/native_ui/: native_label_host.cpp  native_label_host.hpp  native_ui_module.cpp  native_ui_module.hpp
src/modules/prototypes/: prototype_module.cpp  prototype_module.hpp
src/modules/render/: render_builtin_meshes.hpp
src/modules/resources/: texture_decode.cpp  texture_decode.hpp
src/modules/sound/: audio_backend.hpp  audio_backend_xaudio2.cpp  audio_backend_xaudio2.hpp  isound_service.hpp  sound_module.cpp  sound_module.hpp
src/modules/webview/: web_dialog_host.cpp
src/native_ui/: native_ui_builder.cpp  native_ui_builder.hpp  native_ui_compiler.cpp  native_ui_compiler.hpp  native_ui_element.hpp  native_ui_frame.cpp  native_ui_frame.hpp  native_ui_style.hpp  ui_canvas_metrics.cpp  ui_canvas_metrics.hpp
src/prototypes/compiler/: line_render_compiler.cpp  line_render_compiler.hpp  runtime_stress_frame_compiler.cpp  runtime_stress_frame_compiler.hpp
src/prototypes/entity/appearance/: light_visibility.hpp  reflection.hpp  shadow.hpp
src/prototypes/entity/object/: mesh.hpp
src/prototypes/math/: reflectivity_math.hpp
src/prototypes/presentation/: item.hpp  pass.hpp
src/prototypes/systems/: runtime_stress_policy.hpp
tests/: CMakeLists.txt  engine_contract_tests.cpp  test_studio_mcp.py
tools/ai_bridge/: README.md  studio_mcp.py  tools.json
tools/game_preview/: main.cpp
